--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+}
+main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
 }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 5px;
+}
+table, th, td {
+  border: 1px solid black;
+}
+td {
+  min-width: 160px;
+  max-width: 250px;
+}
+
+form {
+  display: inline-block;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+
+
